<resources>

    <string name="app_name">El Chino Admin</string>

    <string name="bt_agregar_cobrador">AGREGAR COBRADOR</string>
    <string name="bt_hoy">MOVIMIENTOS DEL DIA</string>
    <string name="bt_caja">CAJA VENDEDORES</string>
    <string name="bt_volver">VOLVER</string>
    <string name="bt_finanzas">VER COBRADOR</string>
    <string name="bt_cierre_rango">RANGO DE FECHAS</string>
    <string name="bt_aprob_recha">APROB/RECH SOLICITUD</string>
    <string name="monto_prestado_total">Monto prestado total: </string>
    <string name="monto_recuperado_total">Monto recuperado total: </string>
    <string name="monto_en_mora">Monto en mora: </string>
    <string name="fecha_inicial">FECHA INICIO</string>
    <string name="fecha_fin">FECHA FIN</string>
    <string name="tv_aux">TextView auxiliar</string>
    <string name="balance_general">Balance general: </string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="cambiar_fecha">CAMBIAR FECHA</string>
    <string name="digite_usuario">Digite su usuario...</string>
    <string name="usuario">usuario...</string>
    <string name="digite_password">Digite su usuario...</string>
    <string name="password">usuario...</string>

</resources>