<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HoyActivity">

    <TextView
        android:id="@+id/et_monto_prestado"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="128dp"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_balance_general"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="72dp"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_monto_mora" />

    <TextView
        android:id="@+id/et_monto_mora"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="72dp"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_monto_recuperado" />

    <TextView
        android:id="@+id/et_monto_recuperado"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="72dp"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_monto_prestado" />

    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_saludo" />

    <TextView
        android:id="@+id/tv_saludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_monto_prestado"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/monto_prestado_total"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/et_monto_prestado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_monto_prestado"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_monto_recuperado"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:text="@string/monto_recuperado_total"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/et_monto_recuperado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_monto_recuperado"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_monto_mora"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/monto_en_mora"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/et_monto_mora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_monto_mora"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_balance_general"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/balance_general"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/et_balance_general"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_balance_general"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="301dp"
        android:layout_height="59dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_saludo"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/bt_fecha_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_inicial"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <Button
        android:id="@+id/bt_cambiar_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_fecha"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_saludo"
        app:layout_constraintVertical_bias="0.838" />

    <Button
        android:id="@+id/bt_fecha_fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_fin"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <Button
        android:id="@+id/bt_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_volver"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_cambiar_fecha" />

    <Button
        android:id="@+id/bt_confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_saludo"
        app:layout_constraintVertical_bias="0.278" />

    <TextView
        android:id="@+id/tv_auxiliar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_aux"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_saludo"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/tv_multiline"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/bt_cambiar_fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_auxiliar"
        app:layout_constraintVertical_bias="0.029" />

    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/et_multiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cierre!!!..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/bt_imprimir"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:icon="@android:drawable/ic_notification_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fecha" />

</androidx.constraintlayout.widget.ConstraintLayout>